# slash-backend-take-home

./: Dockerfile  README.md  Slash Backend.drawio  docker-compose.yaml  entrypoint.sh  init.sql  openapi.json  package-lock.json  package.json
server/: api.py  db.py  models.py  pyproject.toml  schemas.py  worker.py
src/: server.ts
