[tool.poetry]
name = "slash"
version = "0.1.0"
description = "slash monorepo"
authors = ["Punit Arani <punitsai36@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.29.0"
fastapi = "^0.115.0"
pika = "^1.3.2"
pydantic = "^2.9.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
pylint = "^3.3.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
